--- a/apps/cluba-website-ui/src/app/welcome/hero.component.html
+++ b/apps/cluba-website-ui/src/app/welcome/hero.component.html
@@ -15,7 +15,7 @@
                 d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
               />
             </svg>
-            <span>Information about the purpose of the club goes here. Two or so concise sentences.</span>
+            <span>Information about the purpose of the club goes here. Two or so concise sentences. Lets add another sentence</span>
           </h2>
           <a href="#commands"> What&apos;s next? </a>
         </div>
